--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,15 @@ jobs:
         with:
           node-version: 16.x
 
+      - name: Zip
+        run: zip -9 -r -UN=UTF8 icons.zip ./icons
+
+      - name: Release
+        uses: ncipollo/release-action@v1
+        with:
+          artifacts: icons.zip
+          token: ${{ secrets.G_TOKEN }}
+
       - run: npx changelogithub # or changelogithub@0.12 if ensure the stable result
         env:
           GITHUB_TOKEN: ${{secrets.G_TOKEN}}
